log/build_2024-04-20_12-19-52/manos_manager/stdout_stderr.log
running egg_info
writing ../../build/manos_manager/manos_manager.egg-info/PKG-INFO
writing dependency_links to ../../build/manos_manager/manos_manager.egg-info/dependency_links.txt
writing entry points to ../../build/manos_manager/manos_manager.egg-info/entry_points.txt
writing requirements to ../../build/manos_manager/manos_manager.egg-info/requires.txt
writing top-level names to ../../build/manos_manager/manos_manager.egg-info/top_level.txt
reading manifest file '../../build/manos_manager/manos_manager.egg-info/SOURCES.txt'
writing manifest file '../../build/manos_manager/manos_manager.egg-info/SOURCES.txt'
running build
running build_py
copying manos_manager/manos_manager.py -> /home/field/MANOS/build/manos_manager/build/lib/manos_manager
running install
running install_lib
copying /home/field/MANOS/build/manos_manager/build/lib/manos_manager/manos_manager.py -> /home/field/MANOS/install/manos_manager/lib/python3.8/site-packages/manos_manager
byte-compiling /home/field/MANOS/install/manos_manager/lib/python3.8/site-packages/manos_manager/manos_manager.py to manos_manager.cpython-38.pyc
running install_data
  File "/home/field/MANOS/install/manos_manager/lib/python3.8/site-packages/manos_manager/manos_manager.py", line 102
    self.servo_controller =
                           ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/field/MANOS/install/manos_manager/lib/python3.8/site-packages/manos_manager-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/manos_manager/manos_manager.egg-info to /home/field/MANOS/install/manos_manager/lib/python3.8/site-packages/manos_manager-0.0.0-py3.8.egg-info
running install_scripts
Installing manos_manager script to /home/field/MANOS/install/manos_manager/lib/manos_manager
writing list of installed files to '/home/field/MANOS/build/manos_manager/install.log'
